<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_baseline_home"
        android:title="@string/string_string_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@id/feedFragment"
        android:icon="@drawable/ic_baseline_favorite"
        android:title="Favourites"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/feedFragment"
        android:icon="@drawable/ic_baseline_comment"
        android:title="@string/string_string_feed"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/accountFragment"
        android:title="@string/string_string_account"
        android:icon="@drawable/ic_baseline_person"
        app:showAsAction="ifRoom"/>


</menu>